--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "telegrambot",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
@@ -12,5 +11,6 @@
   "dependencies": {
     "node-telegram-bot-api": "^0.65.1",
     "nodemon": "^3.1.0"
-  }
+  },
+  "description": ""
 }
