--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@grammyjs/router": "^2.0.0",
     "dotenv": "^16.4.5",
+    "googleapis": "^134.0.0",
     "grammy": "^1.21.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "sharp": "^0.33.3"
   },
   "description": ""
 }
