--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "dependencies": {
     "@grammyjs/router": "^2.0.0",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "googleapis": "^134.0.0",
     "grammy": "^1.21.1",
+    "mongodb": "^6.7.0",
     "nodemon": "^3.1.0",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "uuid": "^9.0.1"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^20.12.13"
+  }
 }
